trunk/Archive2/c3/9554395689b81c/output
main.cpp:16:8: error: call to deleted constructor of 'cu'
    cu cu("hello");
       ^  ~~~~~~~
main.cpp:11:5: note: 'cu' has been explicitly marked deleted here
    cu(const char*) = delete;
    ^
1 error generated.
